[project]
name = "bussticketbd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "email-validator>=2.3.0",
    "fastapi>=0.121.2",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "motor>=3.7.1",
    "openai>=2.8.0",
    "passlib>=1.7.4",
    "pinecone>=7.3.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn[standard]>=0.38.0",
]
